Fix - XP & Green points system & profile icon

--- a/src/app/components/member/dashboard/dashboard.component.html
+++ b/src/app/components/member/dashboard/dashboard.component.html
@@ -6,7 +6,7 @@
       </div>
       <div class="user-info">
         <span class="user-name">{{ userName }}</span>
-        <span class="user-level">Level 1</span>
+        <span class="user-level">{{ levelIcon }} Level {{ userLevel }} - {{ levelName }}</span>
       </div>
     </div>
     
