--- a/src/app/components/shared/splash/splash.component.html
+++ b/src/app/components/shared/splash/splash.component.html
@@ -3,7 +3,7 @@
     <div class="initial-screen">
       <div class="content-wrapper">
         <div class="logo-section">
-          <img src="./assets/logo.png" alt="Logo" class="logo-image">
+          <img src="./assets/logov2.png" alt="Logo" class="logo-image">
           <h2 class="app-name">Time For Green</h2>
         </div>
         
@@ -24,7 +24,7 @@
       <div class="video-frame">
         <div class="video-header">
           <div class="header-left">
-            <img src="favicon.ico" alt="Logo" class="logo-small">
+            <img src="./assets/logov2.png" alt="Logo" class="logo-small">
             <span class="brand-text">Time For Green</span>
           </div>
           <div class="header-right">
@@ -48,7 +48,7 @@
         @if (showGoGreenButton) {
           <div class="button-container">
             <div class="button-content">
-              <p class="button-message">Ready to change the narrative?</p>
+              <p class="button-message">This happened because someone somewhere did not care about our environment. Ready to change the narrative?</p>
               <button class="go-green-btn" (click)="goToProfile()">
                 <span class="btn-text">GO GREEN</span>
                 <span class="btn-arrow">→</span>
